# wt-podcast2

./: .gitignore  Dockerfile  docker-compose.yml
server/: manage.py  pyproject.toml
server/wtpodcast2/: asgi.py  settings.py  urls.py  wsgi.py
server/wtpodcast2/feeds/dailytext/: admin.py  apps.py  models.py  urls.py  views.py
server/wtpodcast2/feeds/dailytext/migrations/: 0001_initial.py  0002_auto_20200525_1915.py
server/wtpodcast2/feeds/magazines/: admin.py  models.py  urls.py  views.py
server/wtpodcast2/feeds/magazines/migrations/: 0001_initial.py  0002_auto_20200525_1803.py  0003_auto_20200525_1828.py
server/wtpodcast2/feeds/management/commands/: update_feeds.py
server/wtpodcast2/feeds/whatsnew/: admin.py  apps.py  models.py  urls.py  views.py
server/wtpodcast2/feeds/whatsnew/migrations/: 0001_initial.py  0002_auto_20200525_1638.py
