[tool.poetry]
name = "wt-podcast2"
version = "0.1.0"
description = ""
authors = ["Craig Weber <crgwbr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.0"
beautifulsoup4 = "^4.9.1"
eyeD3 = "^0.8.10"
feedgen = "^0.9.0"
lxml = "^4.4"
pydub = "^0.23.1"
pytz = "^2020.1"
PyYAML = "^5.1.2"
requests = "^2.22.0"
Pillow = "^7.1.2"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
flake8 = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
